others/infra/backend.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-quickmenu-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-quickmenu
  template:
    metadata:
      labels:
        app: backend-quickmenu
    spec:
      containers:
        - name: backend-quickmenu
          image: cchiappone/quickmenu-backend:0.1.1
          ports:
            - containerPort: 8080
