others/infra/backoffice.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-quickmenu-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-quickmenu
  template:
    metadata:
      labels:
        app: backoffice-quickmenu
    spec:
      containers:
        - name: backoffice-quickmenu
          image: cchiappone/quickmenu-backoffice:0.1.0
          ports:
            - containerPort: 80
