others/infra/db.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-quickmenu-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-quickmenu
  template:
    metadata:
      labels:
        app: db-quickmenu
    spec:
      containers:
        - name: db-quickmenu
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: quickmenu-mysql-pvc
