others/infra/frontend-app.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-quickmenu-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app-quickmenu
  template:
    metadata:
      labels:
        app: frontend-app-quickmenu
    spec:
      containers:
        - name: frontend-app-quickmenu
          image: cchiappone/quickmenu-frontend-app:0.1.0
          ports:
            - containerPort: 4200
