others/infra/backend.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-quickmenu-service
spec:
  selector:
    app: backend-quickmenu
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
