others/infra/backoffice.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-quickmenu-service
spec:
  selector:
    app: backoffice-quickmenu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
