others/infra/db.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-quickmenu-service
spec:
  selector:
    app: db-quickmenu
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
