others/infra/quickmenu.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickmenu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cchiappone-quickmenu.my.kube.um.edu.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backoffice-quickmenu-service
                port:
                  number: 80
